Добавил локализацию в свою страницу

--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -9,5 +9,9 @@
   "menu" : "Menu",
   "profile" : "Profile",
   "contact" : "Contacts",
-  "cart" : "Cart"
+  "cart" : "Cart",
+  "my_name" : "Atangulov Ruzil Rishatovich",
+  "omne" : "My inf: Ogur4ik",
+  "my_date" : "Ygadai birth date",
+  "subs" : "Subscribers"
 }
