--- a/assets/languages/ru.json
+++ b/assets/languages/ru.json
@@ -9,5 +9,9 @@
   "menu" : "Меню",
   "profile" : "Профиль",
   "contact" : "Контакты",
-  "cart" : "Корзина"
+  "cart" : "Корзина",
+  "my_name" : "Атангулов Рузиль Ришатович",
+  "omne": "Обо мне: Огурчик",
+  "my_date": "Угадайте дату рождения",
+  "subs" : "Подписчики"
 }
