--- a/assets/languages/ru.json
+++ b/assets/languages/ru.json
@@ -11,7 +11,10 @@
   "contact" : "Контакты",
   "cart" : "Корзина",
   "my_name" : "Атангулов Рузиль Ришатович",
-  "omne": "Обо мне: Огурчик",
+  "omne": "Обо мне",
   "my_date": "Угадайте дату рождения",
-  "subs" : "Подписчики"
+  "subscribes" : "Подписчики",
+  "subscribe" : "Подписаться",
+  "unsubscribe" : "Отписаться",
+  "wallet" : "Кошелек"
 }
