--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -11,7 +11,11 @@
   "contact" : "Contacts",
   "cart" : "Cart",
   "my_name" : "Atangulov Ruzil Rishatovich",
-  "omne" : "My inf: Ogur4ik",
+  "omne" : "My inf",
   "my_date" : "Ygadai birth date",
-  "subs" : "Subscribers"
+  "select_a_date": "Select a date",
+  "subscribes" : "Subscribes",
+  "subscribe" : "Subscribe",
+  "unsubscribe" : "Unsubscribe",
+  "wallet" : "Wallet"
 }
